day 1,2,3 HTML changes

--- a/HTML/Day1&2/index.html
+++ b/HTML/Day1&2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 1-Subramania Bharati</title>
+    <title>Subramania Bharati</title>
 </head>
 <body bgcolor="grey" text="white">
     <h1><b>Subramania Bharati</b>: The Revolutionary Poet of Tamil Nadu</h1>
@@ -98,7 +98,7 @@
     <hr>
 
     <h2>Famous Poems and Songs by Subramania Bharati</h2>
-    <ul>
+    <ul type="circle">
         <li>"Pudhumai Penn" (புதுமைப் பெண்) - Celebrates the modern, liberated woman.</li>
         <li>"Chinnanchiru Kiliye" (சின்னஞ்சிறு கிளியே) - A tender lullaby expressing love and affection.</li>
         <li>"Vande Mataram" (வந்தே மாதரம்) - A Tamil adaptation of Bankim Chandra Chatterjee's iconic national song.</li>
@@ -124,6 +124,6 @@
         
     In celebrating <i>Bharati</i>, we celebrate the spirit of India—its resilience, its diversity, and its unyielding quest for freedom and justice. <i>Bharati</i>'s life may have been cut short, but his legacy lives on, inspiring generations to dream, to fight, and to believe in the possibility of a better tomorrow.</p>
 
-    <p><strong><em><a href="https://en.wikipedia.org/wiki/Subramania_Bharati">Bharathiyar Wikipedia Page</a></em></strong></p>
+    <p><strong><em><a href="https://en.wikipedia.org/wiki/Subramania_Bharati" target="_self">Bharathiyar Wikipedia Page</a></em></strong></p>
 </body>
 </html>
