--- a/HTML/Day4/index.html
+++ b/HTML/Day4/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Subramania Bharati</title>
 </head>
-<body>
-    
+<body bgcolor="grey" text="white">
+    <h1><b>Subramania Bharati</b>: The Revolutionary Poet of Tamil Nadu</h1>
+    <img src="bharathiyar.jpeg" width="150px" height="150px">
+
+    <p><b>Subramania Bharati</b>, often referred to as "Bharathiyar," was a towering figure in the Indian independence movement, a revolutionary poet, and a social reformer. Born on December 11, 1882, in the small town of Ettayapuram in Tamil Nadu, <i>Bharati</i>'s life and work have left an indelible mark on the history of Tamil literature and Indian nationalism. His contributions to literature, social reforms, and the freedom struggle are immense and continue to inspire generations.</p>
+
+    <ul>
+        <li><a href="earlyLife.html" target="box">Early Life and Education</a></li>
+        <li><a href="literaryContribution.html" target="box">Literary Contributions</a></li>
+        <li><a href="nationalism.html" target="box">Nationalism and Patriotism</a></li>
+        <li><a href="socialReform.html" target="box">Social Reform</a></li>
+        <li><a href="sprituality.html" target="box">Spirituality and Universalism</a></li>
+        <li><a href="roleinFreedom.html" target="box">Role in the Freedom Struggle</a></li>
+        <li><a href="challenges.html" target="box">Challenges and Struggles</a></li>
+        <li><a href="legacy.html" target="box">Legacy and Influence</a></li>
+        <li><a href="impact.html" target="box">Impact on Tamil Literature</a></li>
+        <li><a href="roleinSocialReform.html" target="box">Role in Social Reform</a></li>
+        <li><a href="inspiration.html" target="box">Inspiration for the Freedom Movement</a></li>
+        <li><a href="awardsandPoems.html" target="box">Awards and Poems</a></li>
+        <li><a href="conclusion.html" target="box">Conclusion</a></li>
+    </ul>
+
+    <iframe  src="earlyLife.html" name="box" width="1000px" height="300px"></iframe>
+
 </body>
 </html>
